# zawk

./: .gitignore  CHANGELOG.md  Cargo.toml  How-to-add-builtin-function.md  README.md  demo.awk  dist-workspace.toml  index.http  justfile  llms.txt
.github/workflows/: build.yml  release.yaml
info/: How-to-add-builtin-function.md  examples.md  faq.md  overview.md  performance.md  stdlib.md  types.md
src/: arena.rs  ast.rs  awk_util.rs  builtins.rs  bytecode.rs  cfg.rs  common.rs  compile.rs  dataflow.rs  display.rs  interp.rs  lexer.rs  main.rs
src/codegen/: clif.rs  intrinsics.rs  mod.rs
src/codegen/llvm/: builtin_functions.rs  mod.rs
src/parsing/: syntax.lalrpop
src/runtime/: command.rs  config_util.rs  crypto.rs  csv.rs  date_time.rs  encoding.rs  faker.rs  html.rs  json.rs  kv.rs  libsql.rs  logging.rs  math_util.rs  mod.rs  mysql.rs  network.rs  os_util.rs  postgres.rs  s3.rs  sqlite.rs  str_escape.rs  str_impl.rs  string_search.rs  string_util.rs  utf8.rs  writers.rs
src/runtime/splitter/: chunk.rs  regex.rs
src/templates/: demo.awk
tests/: demo.ini  demo.properties
tests/jwt-keys/: ECDSA-private.pem  ECDSA-pub.pem  jwks.json
