[package]
name = "frawk"
version = "0.4.8"
authors = ["Eli Rosenthal <ezr@cs.brown.edu>"]
edition = "2018"
description = "an efficient Awk-like language"
homepage = "https://github.com/ezrosent/frawk"
repository = "https://github.com/ezrosent/frawk"
readme = "README.md"
keywords = ["awk", "csv", "tsv"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR  Apache-2.0"
build = "build.rs"


[dependencies]
petgraph = "0.6"
smallvec = "1.7"
hashbrown = "0.14"
lazy_static = "1.4.0"
regex = "1.10"
regex-syntax = "0.7.5"
itoa = "1.0"
ryu = "1.0"
libc = "0.2"
tikv-jemallocator = { version = "0.5", optional = true }
rand = "0.8.5"
lalrpop-util = "0.20.0"
unicode-xid = "0.2.4"
llvm-sys = { version = "170", optional = true }
clap = "3.0"
crossbeam-channel = "0.5"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
cfg-if = "1.0"
memchr = "2.7"
grep-cli = "0.1"
termcolor = "1.4"
itertools = "0.12"
assert_cmd = "2.0.12"
paste = "1.0"
cranelift = "0.103"
cranelift-codegen = "0.103"
cranelift-frontend = "0.103"
cranelift-module = "0.103"
cranelift-native = "0.103"
cranelift-jit = "0.103"
fast-float = "0.2"
bumpalo = { version = "3.14.0", features = ["collections"] }
target-lexicon = "0.12.12"
uuid = { version = "1.6", features = ["v4","v7"] }
ulid="1"
fend-core = "1.4"
chrono = "0.4"
dateparser = "0.2"
base32 = "0.4"
base64 = "0.21"
urlencoding = "2"
url = "2"
sha2 = "0.10"
md5 = "0.7"
crc="3"
adler="1"
hmac = "0.12"
bcrypt = "0.15"
murmur3 = "0.5"
hex = "0.4"
miniserde = "0.1"
local-ip-address = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
nats = "0.24"
redis = "0.24"
minio="0.1.0"
tokio = "1"
mime_guess="2"
dirs = "5"
notify-rust = "4"
dotenv="0.15"
tempfile="3"

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3"


[features]
default = ["use_jemalloc", "allow_avx2"]
use_jemalloc = ["tikv-jemallocator"]
# Certain features leverage the AVX2 instruction set, but AVX2 can often make
# the entire application slightly slower, even on chips that support it. For
# those cases, consider disabling allow_avx2.
allow_avx2 = []
llvm_backend = ["llvm-sys"]
unstable = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
lalrpop = "0.20.0"

