[package]
name = "zawk"
version = "0.5.8"
authors = ["Eli Rosenthal <ezr@cs.brown.edu>", "linux_china <libing.chen@gmail.com>"]
edition = "2021"
description = "An efficient Awk-like language implementation by Rust with stdlib"
homepage = "https://github.com/linux-china/zawk"
repository = "https://github.com/linux-china/zawk"
readme = "README.md"
keywords = ["awk", "csv", "tsv", "etl", "stdlib"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR  Apache-2.0"
build = "build.rs"


[dependencies]
log = "0.4"
env_logger = "0.11"
petgraph = "0.6"
smallvec = "1.13.2"
hashbrown = "0.14"
growable-bloom-filter = "2"
lazy_static = "1.4.0"
regex = "1.10"
regex-syntax = "0.8"
itoa = "1.0"
ryu = "1.0"
libc = "0.2"
tikv-jemallocator = { version = "0.5", optional = true }
rand = { version = "0.8.5", features = ["default"] }
rand_core = "0.6"
lalrpop-util = "0.20.2"
unicode-xid = "0.2.4"
llvm-sys = { version = "150", optional = true }
clap = "4.5"
crossbeam-channel = "0.5"
crossbeam = "0.8.4"
num_cpus = "1.16.0"
cfg-if = "1.0"
memchr = "2.7"
grep-cli = "0.1"
termcolor = "1.4"
itertools = "0.13"
num-traits = "0.2"
assert_cmd = "2.0.14"
paste = "1.0"
cranelift = "0.109"
cranelift-codegen = "0.109"
cranelift-frontend = "0.109"
cranelift-module = "0.109"
cranelift-native = "0.109"
cranelift-jit = "0.109"
fast-float = "0.2"
bumpalo = { version = "3.16", features = ["collections"] }
target-lexicon = "0.12.14"
uuid = { version = "1.9", features = ["v4", "v7", "fast-rng"] }
ulid = "1"
rs-snowflake = "0.6"
fend-core = "1.4"
chrono = "0.4"
chrono-systemd-time = "0.3"
dateparser = "0.2"
base58 = "0.2"
base64 = "0.22"
base-62 = "0.1"
base85 = "2"
data-encoding = "2"
urlencoding = "2"
flate2 = "1.0"
url = "2"
email_address="0.2"
sha2 = "0.10"
md5 = "0.7"
crc = "3"
adler = "1"
hmac = "0.12"
jwt = "0.16.0"
bcrypt = "0.15"
cbc = "0.1"
aes-gcm = "0.10"
aes = "0.8"
murmur3 = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
gxhash = "3"
blake3 = "1"
hex = "0.4"
miniserde = "0.1"
serde = "1"
serde_json = "1"
logos = "0.14"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }
oneio = { version = "0.16", default-features = false, features = ["remote", "compressions"] }
nats = "0.25"
redis = "0.25"
minio = "0.1.0"
tokio = "1"
mime_guess = "2"
dirs = "5"
notify-rust = "4"
dotenv = "0.15"
tempfile = "3"
whoami = "1.4"
shlex = "1"
shell-escape = "0.1"
pad = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
mysql = { version = "25" }
csv = "1"
semver = "1"
ctor = "0.2"
unicode-segmentation = "1.11"
fake = "2.9"
passwords="3"
Inflector = "0.11"
prometheus-parse = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3"

[features]
default = ["use_jemalloc"]
use_jemalloc = ["dep:tikv-jemallocator"]
# Certain features leverage the AVX2 instruction set, but AVX2 can often make
# the entire application slightly slower, even on chips that support it. For
# those cases, consider disabling allow_avx2.
allow_avx2 = []
llvm_backend = ["dep:llvm-sys"]
unstable = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
lalrpop = "0.20.2"

