[package]
name = "zawk"
version = "0.5.22"
authors = [
    "Eli Rosenthal <ezr@cs.brown.edu>",
    "linux_china <libing.chen@gmail.com>",
]
edition = "2021"
description = "An efficient Awk-like language implementation by Rust with stdlib"
homepage = "https://github.com/linux-china/zawk"
repository = "https://github.com/linux-china/zawk"
readme = "README.md"
keywords = ["awk", "csv", "tsv", "etl", "stdlib"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR  Apache-2.0"
build = "build.rs"


[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
petgraph = "0.6"
smallvec = "1.13.2"
hashbrown = "0.15"
growable-bloom-filter = "2"
lazy_static = "1.5"
regex = "1.11"
regex-syntax = "0.8"
itoa = "1.0"
ryu = "1.0"
libc = "0.2"
rand = { version = "0.8", features = ["default"] }
rand_core = "0.6"
lalrpop-util = "0.22.0"
unicode-xid = "0.2.4"
llvm-sys = { version = "150.2.1", optional = true }
clap = "4.5"
crossbeam-channel = "0.5"
crossbeam = "0.8"
num_cpus = "1.16"
cfg-if = "1.0"
memchr = "2.7"
grep-cli = "0.1"
termcolor = "1.4"
itertools = "0.13"
num-traits = "0.2"
paste = "1.0"
cranelift = "0.114"
cranelift-codegen = "0.114"
cranelift-frontend = "0.114"
cranelift-module = "0.114"
cranelift-native = "0.114"
cranelift-jit = "0.114"
fast-float = "0.2"
bumpalo = { version = "3.16", features = ["collections"] }
target-lexicon = "0.13"
uuid = { version = "1.11", features = ["v4", "v7", "fast-rng"] }
ulid = "1"
tsid = "0.3"
rs-snowflake = "0.6"
fend-core = "1.5"
evalexpr = "12"
chrono = "0.4"
chrono-systemd-time = "0.3"
dateparser = "0.2"
base58 = "0.2"
base64 = "0.22"
base-62 = "0.1"
base85 = "2"
data-encoding = "2"
urlencoding = "2"
flate2 = "1.0"
url = "2"
email_address = "0.2"
sha2 = "0.10"
md5 = "0.7"
crc = "3"
adler = "1"
hmac = "0.12"
jsonwebtoken = { version = "9", features = ["use_pem"] }
bcrypt = "0.16"
cbc = "0.1"
aes-gcm = "0.10"
aes = "0.8"
murmur3 = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
blake3 = "1"
hex = "0.4"
miniserde = "0.1"
serde = "1"
serde_json = "1"
serde_json_path = "0.7"
sxd-document = "0.3"
sxd-xpath = "0.4"
tl = { version = "0.7" }
logos = "0.15"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
oneio = { version = "0.17", default-features = false, features = [
    "remote",
    "compressions",
] }
nats = "0.25"
paho-mqtt = { version = "0.12", features = ["vendored-ssl"] }
redis = "0.27"
minio = "0.1.0"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
dirs = "5"
notify-rust = "4"
dotenv = "0.15"
tempfile = "3"
whoami = "1.4"
shlex = "1"
shell-escape = "0.1"
pad = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
libsql = { version = "0.6", default-features = false, features = [
    "core",
    "remote",
] }
libsql-sys = { version = "0.8", features = ["rusqlite"] }
mysql = { version = "25" }
postgres = { version = "0.19", features = [
    "with-chrono-0_4",
    "with-time-0_3",
    "with-uuid-1",
] }
csv = "1"
semver = "1"
ctor = "0.2"
unicode-segmentation = "1.12"
fake = "3"
identitycard = "0.1"
passwords = "3"
Inflector = "0.11"
prometheus-parse = "0.2"
figlet-rs = "0.1"
ini = "1.3"
java-properties = "2"
time = "0.3.36"
lettre = "0.11"

[target.'cfg(target_family = "unix")'.dependencies]
tikv-jemallocator = { version = "0.6" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.14"
testresult = "0.4"
rstest = "0.23"

[build-dependencies]
lalrpop = "0.22.0"

[features]
default = []
# Certain features leverage the AVX2 instruction set, but AVX2 can often make
# the entire application slightly slower, even on chips that support it. For
# those cases, consider disabling allow_avx2.
allow_avx2 = []
llvm_backend = ["dep:llvm-sys"]
unstable = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true
